# QuantFinLib

./: .gitignore  Cargo.toml  README.md  api.rs  bs.rs  lib.rs  main.rs
Math/: BasicProbability.rs  basic_probability.rs  bonds.rs  distributions.rs  interest.rs  mod.rs
engine/: init_stocks.rs  mod.rs  plots.rs
finance/: bonds.rs  depreciation.rs  interest.rs  mod.rs  options.rs  ratios.rs
math/: distributions.rs  mod.rs  stats.rs  stochasticd.rs
web/: chart.js  index.html
