[package]
name = "qfl"
version = "0.1.1"
edition = "2024"
description = "A Rust library of various functions and tools for Statistics, Quant Finance, Stochastic Modelling, and other needs."
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
csv = "1"    
plotly = { git = "https://github.com/plotly/plotly.rs" }
axum = "0.7"
axum-server = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1"
hyper = { version = "1.2", features = ["full"] }

[[bin]]
name = "qfl"
path = "main.rs"

[lib]
path = "lib.rs"
